[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Knowledge/KnowledgeDownload.gd" type="Script" id=1]
[ext_resource path="res://Icon/UITexture/Icon_Plant.png" type="Texture" id=2]
[ext_resource path="res://Icon/UITexture/Icon_Clock.png" type="Texture" id=3]

[node name="KnowledgeDownload" type="Node2D"]
script = ExtResource( 1 )

[node name="KnowledgecScroll" type="ScrollContainer" parent="."]
margin_right = 960.0
margin_bottom = 512.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnowledgeVBox" type="VBoxContainer" parent="KnowledgecScroll"]
custom_constants/separation = 64

[node name="DownloadPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_left = 256.0
margin_top = 384.0
margin_right = 576.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadBtn" type="Button" parent="DownloadPanel"]
margin_left = 32.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 112.0
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockBtn" type="Button" parent="DownloadPanel"]
margin_left = 192.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 112.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DownloadPanel/DownloadBtn" to="." method="_on_DownloadBtn_pressed"]
[connection signal="pressed" from="DownloadPanel/ClockBtn" to="." method="_on_ClockBtn_pressed"]
